feat: initial v1/evc/check_consistency impl
